--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
+version = "0.1.0-alpha1"
 description="Reactive Extensions for Rust"
 license="MIT"
 name = "rxrs"
-version = "0.1.0-alpha0"
+repository="https://github.com/yingDev/rxrs"
 authors = ["YingDev <ying@yingDev.com>"]
 
 [dependencies]
