--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ description="Reactive Extensions for Rust"
 license="MIT"
 name = "rx"
 repository="https://github.com/yingDev/rxrs"
-authors = ["应元东 <me@yingDev.com>"]
+authors = ["应元东 <ying@yingDev.com>"]
 
 [dependencies]
