--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 version = "0.1.0-alpha2"
 description="Reactive Extensions for Rust"
 license="MIT"
-name = "rx"
+name = "rxrs"
 repository="https://github.com/yingDev/rxrs"
 authors = ["应元东 <ying@yingDev.com>"]
 
