--- a/rx_gtk/Cargo.toml
+++ b/rx_gtk/Cargo.toml
@@ -3,7 +3,8 @@ name = "rx_gtk"
 description="rx utils for gtk-rs"
 version = "0.1.0"
 authors = ["应元东 <ying@yingDev.com>"]
-
+license="MIT"
+repository="https://github.com/yingDev/rxrs/rx_gtk"
 
 [dependencies]
 rxrs = {path = "../rx", version="0.1.0-alpha2"}
