--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "rxrs"
-version = "0.1.0"
-authors = ["ying <ying@yingDev.com>"]
+version = "0.1.0-alpha4"
+description="Reactive Extensions for Rust"
+license="MIT"
+repository="https://github.com/yingDev/rxrs"
+authors = ["YingDev <ying@yingDev.com>"]
 edition = "2018"
 
 [dependencies]
